<resources>
<!--    이름 통일-->
    <string name="app_name" translatable="false">appbasic-SNS-teamproj</string>
    <string name="atSign" translatable="false">\@</string>
    <string name="lng_txt_korean" translatable="false">한국어 (Korean)</string>
    <string name="lng_txt_english" translatable="false">영어 (English)</string>


    <string name="txt_track">트랙</string>
    <string name="txt_id">아이디(이메일)</string>
    <string name="txt_pw">비밀번호</string>
    <string name="txt_modify">개인정보 수정</string>
    <string name="txt_withdraw">회원탈퇴</string>
    <string name="txt_languageSetting">언어 설정</string>
    <string name="txt_logIn">로그인</string>
    <string name="txt_signUp">회원가입</string>
    <string name="txt_signUpQuestion">처음이용하시는건가요?</string>
    <string name="txt_name">이름</string>
    <string name="txt_getName">이름을 입력해주세요</string>
    <string name="txt_email">이메일</string>
    <string name="txt_getEmail">이메일을 입력해주세요</string>
    <string name="txt_getPw">영문, 숫자, 특수문자 혼합 8~16자</string>
    <string name="txt_pwCheck">비밀번호 확인</string>
    <string name="txt_getPwCheck">비밀번호를 한 번 더 입력하세요</string>
    <string name="lng_btn_check">확인</string>
    <string name="my_page_postname" translatable="false">스파르타 친구들 새해 잘 보내!</string>
    <string name="my_page_trackname" translatable="false">Android</string>
    <string name="my_page_time">1일전</string>
    <string name="my_page_post">작성글</string>
    <string name="my_page_comment">작성댓글</string>
    <string name="my_page_commentingpost">댓글단 글</string>
    <string name="my_page_markingpost">좋아요한 글</string>
    <string name="notice_content">어서오세요 르탄이분들!</string>
    <string name="notice_title">공지</string>
    <string name="track_Android" translatable="false">Android</string>
    <string name="track_IOS" translatable="false">IOS</string>
    <string name="track_Unity" translatable="false">Unity</string>
    <string name="track_AI" translatable="false">AI</string>








<!--    OSW-->
    <string name="input_comment">댓글 입력</string>
    <string name="input_comment_hint">댓글을 적어주세요</string>
    <string name="like">유익해요!</string>
    <string name="back">뒤로가기</string>


    <string name="main_detail1_title" translatable="false">스파르타 친구들 새해 잘 보내!</string>
    <string name="main_detail1_content" translatable="false">다들 이번주도 고생했어 Android 화이팅!</string>
    <string name="main_detail1_comment1" translatable="false">잘쉬고 다음주에 봐!</string>
    <string name="main_detail1_comment1_1" translatable="false">고마워!</string>

    <string name="main_detail2_title" translatable="false">코딩 너무 어려워..</string>
    <string name="main_detail2_content" translatable="false">코딩하는데 어떻게 접근해야할 지 모르겠어.. 간단한 팁 같은거 없을까?..</string>
    <string name="main_detail2_comment1" translatable="false">먼저 혼자서 안되도 접근해보고 튜터님께 가보는게 어떨까?</string>
    <string name="main_detail2_comment1_1" translatable="false">일단 최대한 혼자 해보려고 노력해볼께 고마워 ^^</string>
    <string name="main_detail2_comment2" translatable="false">쉬운 알고리즘 문제를 계속 풀어보면서 감을 익히는게 중요한 것 같아</string>

    <string name="main_detail3_title" translatable="false">UNITY 팁하나 알려줄게!</string>
    <string name="main_detail3_content" translatable="false">줄이동은 Alt + arrow Key로 할 수 있어!</string>
    <string name="main_detail3_comment1" translatable="false">오!! 덕분에 코드 작성하기 더 수월해졌어~</string>
    <string name="main_detail3_comment2" translatable="false">다음에 또 유익한 정보 공유해줄께 ㅎㅎ</string>

    <string name="main_detail4_title" translatable="false">최초 AI의 탄생 알고있어??</string>
    <string name="main_detail4_content" translatable="false">알고 있는 사람은 댓글로 공유해줘~</string>
    <string name="main_detail4_comment1" translatable="false">1956년부터 AI라는 용어를 사용하기 시작했다네</string>
    <string name="main_detail4_comment1_1" translatable="false">그리고 이듬해에 초기 인공신경망 퍼셉트론을 만들었어</string>
    <string name="main_detail4_comment2" translatable="false">최초의 AI는 아니지만 AI를 탑제한 최초의 로봇 쉐이키가 66년에 만들어졌어</string>
    <string name="my_page_markinpost">좋아요한 글</string>
    <string name="search_title">관심있는 내용을 검색해보세요!</string>
    <string name="coding_story">코딩이야기</string>
    <string name="daily">일상</string>
    <string name="writing">글쓰기</string>
    <string name="sparta_forest">스파르타 숲</string>
    <string name="present_connector">현재 접속자 : 3</string>


<!--    <string name="my_page_markingpost">좋아요한 글</string>-->
<!--        <string name="app_name">appbasic-SNS-teamproj</string>-->
<!--        <string name="EN_txt_track">Track</string>-->
<!--        <string name="EN_txt_id">ID</string>-->
<!--        <string name="EN_txt_modify">Modifying personal info</string>-->
<!--        <string name="EN_txt_withdraw">Membership Withdrawal</string>-->
<!--        <string name="EN_txt_languageSetting">Language Setting</string>-->
<!--        <string name="EN_txt_pw">Password</string>-->
<!--        <string name="EN_txt_logIn">LogIn</string>-->
<!--        <string name="EN_txt_signUp">SignUp</string>-->
<!--        <string name="EN_txt_signUpQuestion">Is this your first playing this app?</string>-->
<!--        <string name="EN_txt_name">Name</string>-->
<!--        <string name="EN_txt_getName">enter your name</string>-->
<!--        <string name="EN_txt_email">Email</string>-->
<!--        <string name="EN_txt_getEmail">enter your Email</string>-->
<!--        <string name="EN_txt_getPw">8 to 16 characters mixed with English letters, numbers, and special characters</string>-->
<!--        <string name="EN_txt_pwCheck">Check password</string>-->
<!--        <string name="EN_txt_getPwCheck">enter your password again</string>-->
<!--        <string name="EN_lng_btn_check">check</string>-->
<!--        <string name="EN_my_page_time">1 days ago</string>-->
<!--        <string name="EN_my_page_post">Posts</string>-->
<!--        <string name="EN_my_page_comment">Comments</string>-->
<!--        <string name="EN_my_page_commentingpost">Posts I comment</string>-->
<!--        <string name="EN_my_page_markingpost">Posts I marked</string>-->


    <!--    <string name="KR_txt_track">트랙</string>-->
    <!--    <string name="KR_txt_id">아이디(이메일)</string>-->
    <!--    <string name="KR_txt_pw">비밀번호</string>-->
    <!--    <string name="KR_txt_modify">개인정보 수정</string>-->
    <!--    <string name="KR_txt_withdraw">회원탈퇴</string>-->
    <!--    <string name="KR_txt_languageSetting">언어 설정</string>-->
    <!--    <string name="KR_txt_logIn">로그인</string>-->
    <!--    <string name="KR_txt_signUp">회원가입</string>-->
    <!--    <string name="KR_txt_signUpQuestion">처음이용하시는건가요?</string>-->
    <!--    <string name="KR_txt_name">이름</string>-->
    <!--    <string name="KR_txt_getName">이름을 입력해주세요</string>-->
    <!--    <string name="KR_txt_email">이메일</string>-->
    <!--    <string name="KR_txt_getEmail">이메일을 입력해주세요</string>-->
    <!--    <string name="KR_txt_getPw">영문, 숫자, 특수문자 혼합 8~16자</string>-->
    <!--    <string name="KR_txt_pwCheck">비밀번호 확인</string>-->
    <!--    <string name="KR_txt_getPwCheck">비밀번호를 한 번 더 입력하세요</string>-->
    <!--    <string name="KR_lng_btn_check">확인</string>-->
    <!--    <string name="KR_my_page_time">1일전</string>-->
    <!--    <string name="KR_my_page_post">작성글</string>-->
    <!--    <string name="KR_my_page_comment">작성댓글</string>-->
    <!--    <string name="KR_my_page_commentingpost">댓글단 글</string>-->




<!--    KGW-->



<!--    LYJ-->



<!--    JHW-->



</resources>