<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingVertical="32dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_chall_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/txt_getName"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_chall_name_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/design_default_color_error" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_email"
        android:textSize="18sp" />

    <!-- 컨스트레인트 아니고 리니어로도 되네. gone / invisible. gone으로. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_chall_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_getEmail"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_chall_mail_at"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:text="@string/atSign"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_chall_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="도메인"
            android:inputType="text"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spnr_chall_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_chall_mail_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/design_default_color_error" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_pw"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_chall_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/txt_getPw"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_chall_password_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:textColor="@color/design_default_color_error" />

        <TextView
            android:id="@+id/tv_chall_password_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="6"
            android:text="0/16"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_pwCheck"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_chall_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/txt_getPwCheck"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_chall_verify_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/design_default_color_error" />

    <Button
        android:id="@+id/btn_chall_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/txt_signUp"
        android:textSize="18sp" />

</LinearLayout>