<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/iv_sparta"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sparta" />

    <EditText
        android:id="@+id/editTv_id"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_id"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/iv_sparta"
        app:layout_constraintStart_toStartOf="@id/iv_sparta"
        app:layout_constraintTop_toBottomOf="@id/iv_sparta" />

    <EditText
        android:id="@+id/editTv_pw"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_pw"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/editTv_id"
        app:layout_constraintStart_toStartOf="@id/editTv_id"
        app:layout_constraintTop_toBottomOf="@id/editTv_id" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_signUpQuestion"
        android:textColor="#9A9A9A"
        app:layout_constraintEnd_toEndOf="@id/btn_logIn"
        app:layout_constraintStart_toStartOf="@id/btn_logIn"
        app:layout_constraintTop_toBottomOf="@id/btn_logIn" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_logIn"
        app:layout_constraintEnd_toEndOf="@id/editTv_pw"
        app:layout_constraintStart_toStartOf="@id/editTv_pw"
        app:layout_constraintTop_toBottomOf="@id/editTv_pw" />

    <Button
        android:id="@+id/btn_goSignUpActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_signUp"
        app:layout_constraintEnd_toEndOf="@id/tv_question"
        app:layout_constraintStart_toStartOf="@id/tv_question"
        app:layout_constraintTop_toBottomOf="@id/tv_question" />

</androidx.constraintlayout.widget.ConstraintLayout>