<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPageActivity">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/track_AI"
        android:textColor="#2058B8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/roboto_black"
        android:gravity="center|start"
        android:text="@string/main_detail4_comment2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search"
        android:layout_width="89dp"
        android:layout_height="34dp"

        android:layout_marginTop="25dp"
        android:gravity="center|center_vertical"
        android:hint=""
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view10" />

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="29dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/view2"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:layout_editor_absoluteX="-16dp" />

    <!--    The value of attribute "android:text" associated with an element type "Button" must not contain the '<' character.-->


    <View
        android:id="@+id/view11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="2dp" />

    <View
        android:id="@+id/view12"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="-80dp" />

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="131dp"
        android:layout_height="47dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:background="#00A14949"
        android:fontFamily="@font/roboto_black"
        android:text="@string/back"
        android:textColor="#020202"
        android:textSize="14sp"
        app:icon="@drawable/ic_back"
        app:iconTint="#E91E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dtAppTrack"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="72dp"
        android:layout_marginTop="4dp"
        android:background="#E161A664"
        android:fontFamily="@font/roboto_black"
        android:gravity="center|left"
        android:text="@string/sparta_forest"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="23dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:srcCompat="@drawable/sparta" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="23dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="@id/textView3"
        app:layout_constraintEnd_toStartOf="@id/imageView2"
        app:layout_constraintStart_toEndOf="@id/imageView4"
        app:srcCompat="@drawable/sparta3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="23dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:srcCompat="@drawable/sparta2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2023-12-31"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintStart_toEndOf="@id/textView7"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:gravity="center"
        android:text="6"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintStart_toEndOf="@id/imageView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintStart_toEndOf="@id/textView8"
        app:srcCompat="@android:drawable/sym_action_chat" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:gravity="center"
        android:text="2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintStart_toEndOf="@id/imageView5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/main_detail4_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/view10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="19dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="@id/search"
        app:layout_constraintStart_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="@id/search"
        app:srcCompat="@drawable/one" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="409dp"
        android:layout_height="98dp"
        android:fontFamily="@font/roboto_black"
        android:gravity="center|top"
        android:text="@string/main_detail4_content"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintLayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="98dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="@id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintVertical_bias="0.672">


    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="191dp"
        android:layout_height="84dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">


        <TextView
            android:id="@+id/textViewLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/buttonLike"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="14dp"
            android:gravity="center|end"
            android:text="0"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonLike"
            android:layout_width="140dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="#66A32579"
            android:backgroundTint="#FFFF00"
            android:gravity="center|start|left"
            android:text="@string/like"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#B81B9E"
            android:textColorHighlight="#290707"
            android:textColorLink="#CF2C2C"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/buttonLike"
            android:layout_alignEnd="@+id/buttonLike"
            android:layout_alignBottom="@+id/buttonLike"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="2dp"
            app:srcCompat="@drawable/good2" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/commentSection"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_comment_hint"
            android:textSize="24sp" />

    </LinearLayout>


    <Button
        android:id="@+id/buttonPostComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/input_comment"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/commentSection"
        app:layout_constraintEnd_toEndOf="@+id/commentSection"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/roboto_black"
        android:gravity="center|start"
        android:text="@string/main_detail4_comment1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentSection" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="350dp"
        android:layout_height="71dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/roboto_black"
        android:gravity="center|start"
        android:text="@string/main_detail4_comment1_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view11" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:rotation="-178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view11"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/track_AI"
        android:textColor="#2058B8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/track_AI"
        android:textColor="#2058B8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16" />





</androidx.constraintlayout.widget.ConstraintLayout>